# Instant-Dictionary-Webapp

./: README.md  main.py  pyproject.toml
examples/: test1.py
